--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,42 @@ header .navbar .cta-btn a:hover {
   overflow: hidden;
 }
 
+/* Mengatur agar gambar sampul menjadi statis */
+.home-slider-static {
+  position: relative;
+  width: 100%;
+  height: 500px; /* Sesuaikan dengan tinggi yang diinginkan */
+}
+
+.home-slider-static .slider-item {
+  background-size: cover;
+  background-position: center center;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-slider-static .slider-item h1 {
+  
+  text-align: center;
+  font-size: 36px;
+  color: white;
+  font-size: 40px;
+  color: #fff;
+  line-height: 1.2;
+  font-weight: 800 !important;
+  text-transform: uppercase;
+}
+
+/* Responsif */
+@media (max-width: 767px) {
+  .home-slider-static .slider-item h1 {
+    font-size: 24px;
+  }
+}
+
+
 
 /* kode ku */
 
