--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,7 @@ header .navbar .cta-btn a:hover {
 .home-slider-static {
   position: relative;
   width: 100%;
-  height: 500px; /* Sesuaikan dengan tinggi yang diinginkan */
+  height: 100vh; /* Sesuaikan dengan tinggi yang diinginkan */
 }
 
 .home-slider-static .slider-item {
@@ -736,11 +736,11 @@ header .navbar .cta-btn a:hover {
 }
 
 /* Responsif */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .home-slider-static .slider-item h1 {
     font-size: 24px;
   }
-}
+} */
 
 
 
